delete DFS class